crates/c2pa_primitives/tests/ui/unverified_rejected.stderr
error[E0308]: mismatched types
  --> tests/ui/unverified_rejected.rs:22:25
   |
22 |     let _ = double_c2pa(&unverified);
   |             ----------- ^^^^^^^^^^^ expected `&C2pa<u32, Verified>`, found `&C2pa<u32>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected reference `&c2pa_primitives::C2pa<u32, Verified>`
              found reference `&c2pa_primitives::C2pa<u32, c2pa_primitives::Unverified>`
note: function defined here
  --> tests/ui/unverified_rejected.rs:6:4
   |
 5 | #[c2pa_transform(name = "double")]
   | ----------------------------------
 6 | fn double(x: &u32) -> u32 {
   |    ^^^^^^
